jupyterhub/jupyterhub/base/jupyterhub-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
  labels:
    app: jupyterhub
  name: jupyterhub
spec:
  host: ''
  port:
    targetPort: api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: traefik-proxy
    weight: 100
